# sez-renewable-energy-dashboard

./: .buildinfo  .dockerignore  .env_template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DESIGN.md  Dockerfile  EXECUTIVE_SUMMARY.md  LICENSE  METHODOLOGY.md  MIGRATION.md  NOTICE  PERSONAS.md  PLAN.md  README.md  TODOS.md  genindex.html  index.html  model.html  modules.html  objects.inv  pyproject.toml  render.yaml  requirements.txt  run_pipeline.py  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sphinx.yml  test.yml
_sources/usage/: getting_started.rst.txt
config/: settings.py
data/: dim_tech_variant.csv  fct_tech_parameter.csv  grid_emission_factors.xlsx  industrial_location_info.csv  kek_grid_region_mapping.csv  sample_data.csv  substation.geojson
data/captive_power/: cgsp_nickel_tracker.csv  cgsp_nickel_tracker.json  gem_cement_plants.csv  gem_coal_plant_tracker_indonesia.csv  gem_coal_plant_tracker_indonesia.json  gem_coal_plant_tracker_indonesia_full.csv  gem_steel_plants.csv
data/industrial_data/: perusahaan_industri_50k_2023_indonesia_002020251202150115.dbf  perusahaan_industri_50k_2023_indonesia_002020251202150115.shp  perusahaan_industri_50k_2023_indonesia_002020251202150115.shx
data/industrial_sites/: README.md  fertilizer_universe_v1.csv  priority1_sites.csv
docs/: ANALYSIS_ACTION_FLAG_FRAMING.md  METHODOLOGY_CONSOLIDATED.md  METHODOLOGY_V2.md  PLAN_FLIP_SCENARIO.md  PLAN_INDUSTRIAL_PARKS_EXPANSION.md  PLAN_KEK_PLANNING_MODE.md  PLAN_MULTI_RE.md  USER_JOURNEYS.md  cbam_sector_data_collection_plan.md  gap_analysis_existing_vs_conversation_spec.md  gap_analysis_jetp_captive_power.md  industrial_parks_expansion_spec.md  physics_vs_tool_technical_gaps.md  requirements.txt
docs/archives/: METHODOLOGY_V2_draft.md  METHODOLOGY_v0.4.md  methodology_testing.md
docs/designs/migration-mockups/: approved.json  national-view.html  zoomed-kek-view.html
docs/source/: conf.py  index.rst  model.rst  modules.rst
docs/source/usage/: documentation.rst
frontend/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  globals.css
frontend/src/hooks/: useDraggable.ts  useMapLayers.ts  useScorecard.ts  useUrlSync.ts
frontend/src/lib/: actionFlags.ts  api.ts  constants.ts  flipDiff.ts  flipPresets.ts  format.ts  sectorIcons.ts  siteTypes.ts  types.ts  urlState.ts
frontend/src/store/: dashboard.ts
notebooks/: build_kek_grid_region_mapping.ipynb  end_to_end_example.ipynb  kek_scraper.ipynb  research_demand_intensity.ipynb  sample_end_to_end_policy_planning.ipynb  sample_notebook.ipynb
outputs/assets/: buildable_polygons.geojson  wind_buildable_polygons.geojson
outputs/data/processed/: dim_kek.csv  dim_sites.csv  dim_tech_cost.csv  dim_tech_cost_wind.csv  fct_captive_cement.csv  fct_captive_cement_summary.csv  fct_captive_coal.csv  fct_captive_coal_summary.csv  fct_captive_nickel.csv  fct_captive_nickel_summary.csv  fct_captive_steel.csv  (+15 more)
outputs/layers/: industrial.json  peatland.geojson  protected_forest.geojson  pvout.json  wind.json
scripts/: build_wind_pipeline.sh  capture_scorecard_golden.py  download_buildability_data.py  download_road_data.py  export_layers.py
src/: assumptions.py
src/api/: auth.py  main.py
src/dash/: app.py  constants.py  data_loader.py  logic.py  map_layers.py
src/model/: __init__.py  basic_model.py  site_types.py
src/pipeline/: TEMPLATE.py  assumptions.py  build_buildable_polygons.py  build_buildable_raster.py  build_dim_kek.py  build_dim_sites.py  build_dim_tech_cost.py  build_dim_tech_cost_wind.py  build_fct_captive_cement.py  build_fct_captive_coal.py  build_fct_captive_nickel.py  build_fct_captive_steel.py  build_fct_grid_cost_proxy.py  build_fct_kek_demand.py  build_fct_kek_resource.py  build_fct_kek_scorecard.py  build_fct_kek_wind_resource.py  build_fct_lcoe.py  build_fct_lcoe_wind.py  build_fct_ruptl_pipeline.py  build_fct_site_demand.py  build_fct_site_resource.py  build_fct_site_scorecard.py  build_fct_site_wind_resource.py  build_fct_substation_proximity.py  build_industrial_sites.py  build_wind_buildable_polygons.py  build_wind_buildable_raster.py  buildability_filters.py  demand_intensity.py  geo_utils.py  pdf_extract_bpp.py  pdf_extract_esdm_tech.py  pdf_extract_ruptl.py  wind_buildability_filters.py
tests/: test_action_flag_enum.py  test_api.py  test_build_dim_sites.py  test_buildability_filters.py  test_dash_logic.py  test_demand_intensity.py  test_geo_utils.py  test_logic_cbam.py  test_logic_grid.py  test_logic_imports.py  test_logic_lcoe.py  test_logic_technology.py  test_model.py  test_pipeline.py  test_scorecard_golden.py  test_site_types.py
tests/fixtures/: scorecard_golden.pkl
usage/: documentation.html  getting_started.html
utils/: S3_loading.py
(+62 files in other folders)
