[project]
name = "eez"
version = "0.1.1"
description = "Indonesia KEK Power Competitiveness model and dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "numpy>=1.26",
    "pandas>=2.2",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "rioxarray>=0.17",
    "pdfplumber>=0.11",
    "dash>=2.17",
    "dash-mantine-components>=0.14",
    "plotly>=5.22",
    "matplotlib>=3.8",
    "folium>=0.17",
    "playwright",
    "openpyxl>=3.1.5",
    "scipy>=1.13",
    "python-dotenv>=1.0",
    "dash-leaflet>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "src/pipeline/TEMPLATE.py",
    "notebooks/",           # exploratory code — E402, E741, F821 are expected
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"run_pipeline.py" = ["E402"]   # REPO_ROOT path setup must precede pipeline imports

[tool.pytest.ini_options]
testpaths = ["tests"]
