[project]
name = "sez-renewable-energy-dashboard"
version = "1.0.0"
description = "SEZ Renewable Energy Dashboard — clean energy competitiveness model for Indonesia's Special Economic Zones"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT WITH Commons-Clause"}
authors = [{name = "Shaan Barca"}]
dependencies = [
    "boto3",
    "numpy>=1.26",
    "pandas>=2.2",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "rioxarray>=0.17",
    "pdfplumber>=0.11",
    "dash>=2.17",
    "dash-mantine-components>=0.14",
    "plotly>=5.22",
    "matplotlib>=3.8",
    "folium>=0.17",
    "playwright",
    "openpyxl>=3.1.5",
    "scipy>=1.13",
    "python-dotenv>=1.0",
    "dash-leaflet>=1.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "src/pipeline/TEMPLATE.py",
    "notebooks/",           # exploratory code — E402, E741, F821 are expected
]

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "F",        # pyflakes
    "I",        # isort
    "PLE",      # pylint errors (all — these are real bugs)
    "PLW0120",  # useless else on loop
    "PLW0127",  # self-assignment
    "PLW1510",  # subprocess without check
    "PLW2901",  # overwriting loop var
    "PLR0913",  # too many arguments
    "PLR1714",  # repeated equality
    "PLR2004",  # magic values
    "PLR5501",  # collapsible elif
    "PLC0415",  # in-function imports
]
ignore = ["E501"]

[tool.ruff.lint.pylint]
max-args = 6          # default is 5, adjust to taste
max-branches = 12
max-returns = 8
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"run_pipeline.py" = ["E402"]   # REPO_ROOT path setup must precede pipeline imports
"tests/*" = [
    "PLC0415",  # tests often lazily import to avoid collection-time side effects
    "PLR2004",  # tests compare against literal row counts and thresholds
    "PLR0913",  # test fixtures/helpers occasionally take many params
]
# TODOS M24: scoped src/ deferrals — magic-value comparisons (year 2030, EPSG 4326,
# WACC 8.0) and high-arity build_* functions are pre-existing patterns. Cleanup pass
# will hoist constants and split functions; until then these files are exempt so
# unrelated edits don't trip the hook.
"src/dash/data_loader.py" = ["PLR2004"]
"src/pipeline/build_fct_site_resource.py" = ["PLR2004", "PLR0913"]
"src/pipeline/build_fct_site_scorecard.py" = ["PLR2004", "PLR0913"]
# Legacy Plotly Dash app — unused at runtime (frontend is React+Vite).
# Keeping for reference; not maintaining lint hygiene.
"src/dash/app.py" = ["PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
